<resources>
    <string name="app_name">Current Location App</string>
    <string name="current_location">Current Location</string>
    <string name="get_location">Get Location</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>