<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/current_location"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/get_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/get_location"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/update_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/get_location_btn"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:text="Update Location"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/stop_location_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/get_location_btn"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/black"
        android:text="Stop Update Location"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/get_location_btn"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="@color/black"
        android:text="Go to Map Activity"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/country"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lagitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/latitude"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lagitude"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/longitude"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />




</RelativeLayout>